--- a/数据结构.md
+++ b/数据结构.md
@@ -74,7 +74,7 @@
 串匹配：将主串称为目标串，子串称之为模式串。蛮力法匹配。[KMP算法](http://www.ruanyifeng.com/blog/2013/05/Knuth%E2%80%93Morris%E2%80%93Pratt_algorithm.html)匹配。[Boyer-Moore算法](https://github.com/Jack-Lee-Hiter/Introduction-to-The-Design-and-Analysis-of-Algorithms/blob/master/Boyer-Moore/BM%20by%20swift)匹配。
 
 ## 数组和广义表
-数组和广义表可看成是一种特殊的线性表，其特殊在于: 表中的元素本身也是一种线性表。
+数组和广义表可看成是一种特殊的线性表，其特殊在于: 表中的元素本身也是一种线性表。内存连续。根据下标在O(1)时间读/写任何元素。
 
 **二维数组，多维数组，广义表、树、图都属于非线性结构**
 
