数据结构错误修改
修了一个数据结构文法上的错误

--- a/数据结构.md
+++ b/数据结构.md
@@ -15,7 +15,7 @@
 1. 算法五个特性： 有穷性、确定性、可行性、输入、输出
 2. 算法设计要求：正确性、可读性、健壮性、高效率与低存储量需求
 3. 设计算法在执行时间是需要考虑：算法选用的规模、问题的规模
-4. 时间复杂度：算法的执行时间与原操作**执行次数**之和成正比。O(1)<O(logn)<O(n)<O(nlogn)<O(n2)<O(n3)。O(2n)<O(n!)<O(nn)
+4. 时间复杂度：算法的执行时间与原操作**执行次数**之和成正比。O(1)<O(logn)<O(n)<O(nlogn)<O(n<sup>2</sup>)<O(n<sup>3</sup>)。O(2<sup>n</sup>)<O(n!)<O(n<sup>n</sup>)
 5. 空间复杂度：若输入数据所占空间只取决于问题本身，和算法无关，则只需要分析**除输入和程序之外的辅助变量所占额外空间**。
 
 ## 线性表
