--- a/数据结构.md
+++ b/数据结构.md
@@ -92,6 +92,7 @@
 3. 稀疏矩阵：非零元素个数远小于矩阵元素总数。
 	* 三元组顺序表。三元组顺序表虽然节省了存储空间，但时间复杂度比一般矩阵转置的算法还要复杂，同时还有可能增加算法的难度。因此，此算法仅适用于t<<m*n的情况。
 	* 稀疏矩阵在采用压缩存储后将会失去随机存储的功能。因为在这种矩阵中，非零元素的分布是没有规律的，为了压缩存储，就将每一个非零元素的值和它所在的行、列号做为一个结点存放在一起，这样的结点组成的线性表中叫三元组表，它已不是简单的向量，所以无法用下标直接存取矩阵中的元素。
+	* 对于用三元组存储稀疏矩阵，每个元素要用行号,列号,元素值来表示,在用三元组表示稀疏矩阵,还要三个成员来记住矩阵的行数列数,总的元素数，即总共需要(非零元素个数)n+1个元素。
 
 ### 广义表
 广义表（Lists，又称列表）是线性表的推广。广义表是n(n≥0)个元素a1,a2,a3,…,an的有限序列，其中a<sub>i</sub>或者是原子项，或者是一个广义表。若广义表LS（n>=1)非空，则a1是LS的表头，其余元素组成的表(a2,…an)称为LS的表尾。广义表的元素可以是广义表，也可以是原子，广义表的元素也可以为空。
@@ -121,7 +122,9 @@
 1. 树结点：包含一个数据元素及若干指向子树的分支；2. 孩子结点：结点的子树的根称为该结点的孩子；3. 双亲结点：B结点是A结点的孩子，则A结点是B结点的双亲；4. 兄弟结点：同一双亲的孩子结点；5. 堂兄结点：同一层上结点；6. 结点层次：根结点的层定义为1；根的孩子为第二层结点，依此类推；7. 树的高（深）度：树中最大的结点层8. 结点的度：结点子树的个数9. 树的度： 树中最大的结点度。10. 叶子结点：也叫终端结点，是度为0的结点；11. 分枝结点：度不为0的结点（非终端结点）；12. 森林：互不相交的树集合；13. 有序树：子树有序的树，如：家族树；14. 无序树：不考虑子树的顺序；
 
 ### 二叉树
-二叉树可以为空。二叉树结点的子树要区分左子树和右子树，即使只有一棵子树也要进行区分，说明它是左子树，还是右子树。这是二叉树与树的最主要的差别。
+二叉树可以为空。二叉树结点的子树要区分左子树和右子树，即使只有一棵子树也要进行区分，说明它是左子树，还是右子树。这是二叉树与树的最主要的差别。注意区分：二叉树、二叉查找树/二叉排序树/二叉搜索树、二叉平衡(查找)树
+
+**二叉树与树是不同的，二叉树不等价于分支树最多为二的有序树。当一个结点只包含一个子节点时，对于有序树并无左右孩子之分，而对于二叉树来说依然有左右孩子之分，所以二叉树与树是两种不同的结构。**
 
 性质：
 
