--- a/数据结构.md
+++ b/数据结构.md
@@ -221,4 +221,78 @@
 	* 加权邻接矩阵：相连为w，不相连为∞2. 邻接表
 	* 用顶点数组表、边（弧）表表示该有向图或无向图
 	* 顶点数组表：用数组存放所有的顶点。数组大小为图顶点数n
-	* 边表（边结点表）：每条边用一个结点进行表示。同一个结点的所有的边形成它的边结点单链表。  
+	* 边表（边结点表）：每条边用一个结点进行表示。同一个结点的所有的边形成它的边结点单链表。  ### 图的遍历
+深度优先搜索利用栈，广度优先搜索利用队列
+
+求一条从顶点i到顶点s的简单路径--深搜。求两个顶点之间的一条长度最短的路径--广搜。
+
+### 生成树和最小生成树
+每次遍历一个连通图将图的边分成遍历所经过的边和没有经过的边两部分，将遍历经过的边同图的顶点构成一个子图，该子图称为生成树。因此有DFS生成树和BFS生成树。
+
+生成树是连通图的极小子图，有n个顶点的连通图的生成树必定有n-1条边,在生成树中任意增加一条边，必定产生回路。最小生成树：生成树中边的权值(代价)之和最小的树。
+
+Kruskal算法：令最小生成树集合T初始状态为空，在有n个顶点的图中选取代价最小的边并从图中删去。若该边加到T中有回路则丢弃，否则留在T中；依此类推，直至T中有n-1条边为止。
+
+Prim算法、Kruskal算法和Dijkstra算法均属于贪心算法。
+
+### 双连通图和关节点
+若从一个连通图中删去任何一个顶点及其相关联的边，它仍为一个连通图的话，则该连通图被称为**重（双）连通图**。若连通图中的某个顶点和其相关联的边被删去之后，该连通图被分割成两个或两个以上的连通分量，则称此顶点为**关节点**。
+
+没有关节点的连通图为双连通图
+
+1. 若生成树的根结点，有两个或两个以上的分支，则此顶点(生成树的根)必为关节点；
+2. 对生成树上的任意一个非叶“顶点”，若其某棵子树中的所有“顶点”没有和其祖先相通的回边，则该“顶点”必为关节点。
+
+### 有向无环图及其应用
+拓扑排序
+
+AOV网：用顶点表示活动，边表示活动的优先关系的有向图称为**AOV网**。AOV网中不允许有回路，这意味着某项活动以自己为先决条件。 
+
+拓扑有序序列：把AOV网络中各顶点按照它们相互之间的优先关系排列一个线性序列的过程。若v<sub>i</sub>是v<sub>j</sub>前驱，则v<sub>i</sub>一定在v<sub>j</sub>之前；对于没有优先关系的点，顺序任意。拓扑排序：对AOV网络中顶点构造拓扑有序序列的过程。方法：
+
+1. 在有向图中选一个没有前驱的顶点且输出之2. 从图中删除该顶点和所有以它为尾的弧3. 重复上述两步，直至全部顶点均已输出；或者当图中不存在无前驱的顶点为止(此时说明图中有环）
+
+算法描述：
+
+算法描述：
+1. 把邻接表中入度为0的顶点依此进栈2. 若栈不空，则	* 栈顶元素v<sub>j</sub>退栈并输出；	* 在邻接表中查找v<sub>j</sub>的直接后继v<sub>k</sub>，把v<sub>k</sub>的入度减1；若v<sub>k</sub>的入度为0则进栈
+3. 若栈空时输出的顶点个数不是n，则有向图有环；否则，拓扑排序完毕。
+
+AOE网：带权的有向无环图，其中顶点表示事件，弧表示活动，权表示活动持续时间。在工程上常用来表示工程进度计划。一些定义：
+
+1. 事件的最早发生时间（ve(j)）：从源点到j结点的最长的路径。意味着事件最早能够发生的时间。
+2. 事件的最迟发生时间（vl(j)）：不影响工程的如期完工，事件j必须发生的时间。
+3. 活动a<sub>i</sub>由弧<j,k>表示，持续时间记为 dut<j,k>,则有:
+	* 活动的最早开始时间：e(i)=ve(j)
+	* 活动的最迟开始时间：l(i)=vl(k) - dut(<j , k >)4. 活动余量：l(i)-e(i)的差
+5. 关键活动：活动余量为0的活动
+6. 关键路径：从源点到汇点的最长的一条路径，或者全部由关键活动构成的路径
+
+## 查找
+### 静态查找表
+顺序表的顺序查找：应用范围：顺序表或线性链表表示的表，表内元素之间无序。查找过程：从表的一端开始逐个进行记录的关键字和给定值的比较。
+
+顺序有序表的二分查找。平均查找时间(n+1)/n log<sub>2</sub>(n+1)
+
+分块查找：将表分成几块，块内无序，块间有序；先确定待查记录所在块，再在块内查找。
+
+1. 用数组存放待查记录,2. 建立索引表，由每块中最大（小）的关键字及所属块位置的信息组成。
+3. 当索引表较大时，可以采用二分查找4. 在数据量极大时，索引可能很多，可考虑建立索引表的索引，即二级索引，原则上索引不超过三级
+
+分块查找平均查找长度：*ASL*<sub>*bs*</sub> = *L*<sub>*b*</sub> + *L*<sub>*w*</sub>。其中，*L*<sub>*b*</sub>是查找索引表确定所在块的平均查找长度， *L*<sub>*w*</sub>是在块中查找元素的平均查找长度。在n一定时，可以通过选择s使ASL尽可能小。当s=sqrt(n)时，ASL最小。1. 时间：顺序查找最差，二分最好，分块介于两者之间2. 空间：分块最大，需要增加索引数据的空间
+3. 顺序查找对表没有特殊要求  4. 分块时数据块之间在物理上可不连续。所以可以达到插入、删除数据只涉及对应的块；另外，增加了索引的维护。5. 二分查找要求表有序，所以若表的元素的插入与删除很频繁，维持表有序的工作量极大。6. 在表不大时，一般直接使用顺序查找。## 动态查找
+二叉排序树的结点删除：
+
+1. x为叶子结点，则直接删除2. x只有左子树x<sub>L</sub>或只有右子树x<sub>R</sub> ,则令x<sub>L</sub>或x<sub>R</sub>直接成为双亲结点f的子树； 
+3. x即有左子树x<sub>L</sub>也有右子树x<sub>R</sub>，在x<sub>L</sub>中选值最大的代替x，该数据按二叉排序树的性质应在最右边。平衡二叉树：每个结点的平衡因子都为 1、－1、0 的二叉排序树。或者说每个结点的左右子树的高度最多差1的二叉排序树。平衡二叉树的平衡：
+
+1. 左调整(新结点插入在左子树上的调整)：
+	* LL(插入在结点左子树的左子树上)：旋转前后高度都为h+1
+	* LR(新插入结点在左子树的右子树上)：旋转前后高度仍为h+1
+2. 右调整(新结点插入在右子树上进行的调整):
+	* RR(插入在的右子树的右子树上)：处理方法和 LL对称
+	* RL(插入在的右子树的左子树上)：处理方法和 LR对称
+
+平衡树建立方法：
+
+1. 按二叉排序树插入结点2. 如引起结点平衡因子变为|2|，则确定旋转点，该点是离根最远（或最接近于叶子的点）3. 确定平衡类型后进行平衡处理，平衡后以平衡点为根的子树高不变
