--- a/数据结构.md
+++ b/数据结构.md
@@ -10,7 +10,7 @@
 	* 线性结构 数据元素之间一对一的关系
 	* 树形结构 数据元素之间一对多的关系
 	* 图状结构或网状结构 结构中的数据元素之间存在多对多的关系
-2. 物理结构/存储结构：数据在计算机中的表示。物理结构是描述数据具体在内存中的存储（如：顺序结构、链式结构、索引结构、希哈结构）等
+2. 物理结构/存储结构：数据在计算机中的表示。物理结构是描述数据具体在内存中的存储（如：顺序结构、链式结构、索引结构、哈希结构）等
 
 1. 算法五个特性： 有穷性、确定性、可行性、输入、输出
 2. 算法设计要求：正确性、可读性、健壮性、高效率与低存储量需求
@@ -329,4 +329,37 @@ B_树中结点的删除
 
 冲突解决
 
-1. 开放定址法。
+1. 开放定址法。当冲突发生时，形成一个探查序列；沿此序列逐个地址探查，直到找到一个空位置（开放的地址），将发生冲突的记录放到该地址中。即H<sub>i</sub>=(H(key)+d<sub>i</sub>) % m，i=1,2,……k(k<=m-1)，H(key)哈希函数，m哈希表长，d<sub>i</sub>增量序列。缺点：删除：只能作标记，不能真正删除；溢出；聚集问题
+	* 线性探测再散列：d<sub>i</sub>=1，2，3，...，m-1
+	* 二次探测再散列：d<sub>i</sub>=1<sup>2</sup>,-1<sup>2</sup>,2<sup>2</sup>,-2<sup>2</sup>,...，±k<sup>2</sup>（k<=m/2）
+	* 伪随机探测再散列: d<sub>i</sub>为伪随机数序列
+2. 链地址法：将所有关键字为同义词的记录存储在一个单链表中，并用一维数组存放头指针。
+
+Hash查找效率：装填因子=表中记录数/表容量
+
+## 内部排序
+1. 内部排序：全部数据可同时放入内存进行的排序。    2. 外部排序：文件中数据太多，无法全部调入内存进行的排序。插入类：
+
+1. 直接插入排序。最坏情况是数据递减序，数据比较和移动量最大，达到O(n<sup>2</sup>)，最好是数据是递增序，比较和移动最少为O(n)
+2. 折半插入排序 。由于插入第i个元素到r[1]到r[i-1]之间时，前i个数据是有序的，所以可以用折半查找确定插入位置，然后插入。
+3. 希尔排序。缩小增量排序。5-3-1。在实际应用中，步长的选取可简化为开始为表长n的一半（n/2），以后每次减半，最后为1。
+
+交换类：
+
+1. 冒泡排序。O(n<sup>2</sup>)通常认为冒泡是比较差的，可以加些改进，比如在一趟中无数据的交换，则结束等措施。
+	* 在数据已基本有序时，冒泡是一个较好的方法   * 在数据量较少时（15个左右）可以用冒泡
+2. 快速排序。
+	* 时间复杂度。最好情况：每次支点总在中间，O(nlog<sub>2</sub>n)，平均O(nlog<sub>2</sub>n)。最坏，数据已是递增或递减，O(n<sup>2</sup>)。
+	* 空间复杂度。需栈空间以实现递归，最坏情况：S(n)=O(n)；一般情况：S(n)=O(log<sub>2</sub>n)
+	* 在序列已是有序的情况下，时间复杂度最高。原因：支点选择不当。改进：随机选取支点或最左、最右、中间三个元素中的值处于中间的作为支点，通常可以避免最坏情况。所以，快速排序在表已基本有序的情况下不合适。	* 在序列长度已较短时，采用直接插入排序、起泡排序等排序方法。序列的个数通常取10左右。
+
+选择类排序：
+
+1. 简单选择排序。O(n<sup>2</sup>)。总比较次数n(n-1)/2。
+2. 堆排序。建堆 O(n)，筛选O(nlogn)
+3. 归并排序。时间：与表长成正比，若一个表表长是m，另一个是n，则时间是O(m+n)。单独一个数组归并，时间：O(nlogn)，空间：O(n)。
+4. 基数排序。在一般情况下，每个结点有 d 位关键字，必须执行 t = d次分配和收集操作。分配的代价：O(n)；收集的代价：O(rd) （rd是基数）；总的代价为：O( d ×(n + rd))。比较法分类的下界：O(nlogn)## 外部排序1. 生成合并段（run）：读入文件的部分记录到内存－>在内存中进行内部排序－>将排好序的这些记录写入外存，形成合并段－>再读入该文件的下面的记录，往复进行，直至文件中的记录全部形成合并段为止。
+2. 外部合并：将上一阶段生成的合并段调入内存，进行合并，直至最后形成一个有序的文件。1. 根据内存容量设若干个输入缓冲区和一个输出缓冲区。若采用二路归并，用两个输入缓冲。
+2. 归并的方法类似于归并排序的归并算法。增加的是对缓冲的监视，对于输入，一旦缓冲空，要到相应文件读后续数据，对于输出缓冲，一旦缓冲满，要将缓冲内容写到文件中去。## 有效的算法设计
+1. 贪心法。Dijkstra的最短路径、Prim求最小生成树的O(n<sub>2</sub>)的算法、关键路径及关键活动的求法。2. 回溯法3. 分支限界法4. 分治法。分割、求解、合并。二分查找、归并排序、快速排序。5. 动态规划动态规划解题的方法是一种高效率的方法，其时间复杂度通常为O(n<sub>2</sub>)，O(n<sub>3</sub>)等，可以解决相当大的信息量。（数塔在n<=100层时，可以在很短的时间内得到问题解）* 适用的原则：原则为优化原则，即整体优化可以分解为若干个局部优化。* 动态规划比穷举法具有较少的计算次数* 递归算法需要很大的栈空间，而动态规划不需要栈空间贪心和动态规划的差别：1. 所谓贪心选择性质是指所求问题的整体最优解可以通过一系列局部最优的选择，即贪心选择来达到。这是贪心算法可行的第一个基本要素，也是贪心算法与动态规划算法的主要区别。2. 在动态规划算法中，每步所作的选择往往依赖于相关子问题的解。因而只有在解出相关子问题后，才能作出选择。而在贪心算法中，仅在当前状态下作出最好选择，即局部最优选择。然后再去解作出这个选择后产生的相应的子问题。
+3. 贪心算法所作的贪心选择可以依赖于以往所作过的选择，但决不依赖于将来所作的选择，也不依赖于子问题的解。正是由于这种差别，动态规划算法通常以自底向上的方式解各子问题，而贪心算法则通常以自顶向下的方式进行,以迭代的方式作出相继的贪心选择，每作一次贪心选择就将所求问题简化为一个规模更小的子问题。 1. 一个问题称为是P的，如果它可以通过运行多项式次(即运行时间至多是输入量大小的多项式函数的一种算法获得解决）。----确定性问题
