--- a/数据结构.md
+++ b/数据结构.md
@@ -1,3 +1,4 @@
+[TOC]
 # 数据结构
 ## 一些概念
 > 数据结构就是研究数据的**逻辑结构**和**物理结构**以及它们之间**相互关系**，并对这种结构定义相应的运算，而且确保经过这些运算后所得到的新结构仍然是原来的结构类型。1. 数据：所有能被输入到计算机中，且能被计算机处理的符号的集合。是计算机操作的对象的总称。
